# sushi

./: .gitmodules  CLAUDE.md  CMakeLists.txt  build.sh  build_lib.sh
apps/: CMakeLists.txt  NodeGraphModel.swift  NodeGraphView.swift  NodeGraphWindowController.swift  VisualGraphView.swift  main.cpp  main_cocoa.mm  node_graph_bridge.h  node_graph_bridge.mm  sushi-gui-Bridging-Header.h  sushi_status_bar.h  sushi_status_bar.mm
include/sushi/: compile_time_settings.h  control_interface.h  options.h  terminal_utilities.h
misc/config_files/: play_audelay_local.json  play_cmajor_inline_sine.json  play_cmajor_pro54.json  play_cmajor_sine_freeverb_gui.json  play_faust_inline.json  play_faust_local.json  play_faust_tambura.json  play_iplug_midi_test.json  play_iplugeffect.json  play_iplugeffect_clap.json  play_jsfx_fx_chain.json  play_jsfx_gain.json  play_jsfx_gfx_test.json  play_jsfx_midi_synth.json  play_simple_synth.json
rpc_interface/include/sushi_rpc/: grpc_server.h
rpc_interface/src/: control_service.cpp  control_service.h  grpc_server.cpp
src/control_frontends/: osc_frontend.cpp  osc_frontend.h
src/engine/: audio_engine.cpp  event_dispatcher.cpp  json_configurator.cpp  link_dummy.h  midi_dispatcher.cpp  parameter_manager.cpp  parameter_manager.h  transport.cpp  transport.h
src/engine/controller/: audio_graph_controller.cpp  audio_graph_controller.h  controller.cpp  controller.h  controller_common.h  editor_controller.cpp  editor_controller.h  parameter_controller.cpp  parameter_controller.h
src/engine/json_schemas/: host_config_schema.json  tracks_schema.json
src/plugins/brickworks/: simple_synth_plugin.cpp
test/: CMakeLists.txt
test/unittests/engine/: controller_test.cpp  json_configurator_test.cpp
test/unittests/engine/controllers/: audio_graph_controller_test.cpp
test/unittests/test_utils/: control_mockup.h
